# RiskyAdventure-k8s-scale-test

./: .gitignore  README.md  pyproject.toml  run-scale-test.sh
.hypothesis/constants/: 0bd930caaea570ff  1ca0e1f0671da446  2400a8dcb90097df  44d5c01f6a202dda  7d03297fbf471e9b  86d562e8a45e16c1  a15b62462b90f007  af66f426d40c1b12  b4bda5b3e8f43ab2  ba580def3e4c0dc8  c3bc00773bb55f09  cbc10fad37711987  ea677a8cd0b43cfd
.kiro/docs/: mcp-server-setup.md
.kiro/hooks/: enforce-rigor.kiro.hook  scale-test-proactive-scan.json  scale-test-reactive-investigation.json  scale-test-skeptical-review.json
.kiro/prompts/: next-session-bpf-sandbox-investigation.md  next-session-event-investigation.md  next-session-prompt-mac-collision.md  wire-observability-scanner.md
.kiro/steering/: run-scale-test.md  (+3 more)
docs/: anomaly-detection.md  architecture.md  bug-report-vpc-cni-mac-collision.md  code-assessment.md  configuration.md  monitoring.md  next-session-prompt-mac-collision.md  next-session-prompt.md  observability-scanner.md  test-lifecycle.md
scripts/: cl2-observer.sh  observer.sh
tests/: __init__.py  conftest.py  test_agent_context.py  test_agent_schema.py  test_anomaly_proactive.py  test_anomaly_tracing.py  test_chart_agent_findings.py  test_cl2_parser.py  test_cli_tracing.py  test_config_cli.py  test_controller_agent_findings.py  test_controller_observability_prompt.py  test_controller_tracing.py  test_event_analysis.py  test_evidence_agent.py  test_health_sweep.py  test_monitor_tracing.py  test_preflight.py  test_preflight_observability.py  test_scanner_sweep_tracing.py  test_tracing_concurrency_properties.py  test_tracing_phase_span.py  test_tracing_properties.py  test_tracing_slow_callback.py  test_tracing_span.py  test_tracing_trace_thread.py
(+348 files in other folders)
